<resources>
    <string name="app_name">109590002_HW6_1</string>
    <string name="chocolate_syrup">Chocolate syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie_crumblrs">Orio cookie crumblrs</string>
    <string name="show_toast">SHOW TOAST</string>
</resources>